@@ -1,3 +1,8 @@
+2012-07-10  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* crt/tlsmthread.c: Removed leftovers of Win9X/Me mingwm10.dll
+	support.
+
 2012-07-06  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* crt/tlssup.c: Removed Windows 9X/Me mingwm10.dll support.
